# fakeroute

./: Dockerfile  LICENSE.txt  README.md  fakeroute.py  iptables.sh  pyproject.toml  requirements.txt  spoofer.py
.github/workflows/: publish-docker.yml  publish.yml
