[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fakeroute"
version = "1.0.0"
description = "Fake traceroute generator using IP address spoofing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "scapy",
    "pyroute2",
]

[project.scripts]
fakeroute = "fakeroute:main"
