[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fakeroute"
version = "1.0.1"
description = "Fake traceroute generator using IP address spoofing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "scapy",
    "pyroute2",
]

[project.scripts]
fakeroute = "fakeroute:main"
